pwt-panel-header: avoid scrollbars

--- a/scss/_panel.scss
+++ b/scss/_panel.scss
@@ -14,6 +14,7 @@
 }
 
 .pwt-panel-header {
+    overflow: hidden; // avoid scrollbars
     padding: map-get($spacers, 1) map-get($spacers, 2);
     color: var(--pwt-color);
     background: var(--pwt-color-background);
